--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="wrapper">
 		<header class="header">
 			<div class="logo">
-				<a href="#">
+				<a href="./index.html">
 					<img src="./images/header/Vector-logo.svg" alt="ЛОГОТИП">
 				</a>
 			</div>
@@ -107,6 +107,123 @@
 				</div>
 			</section>
 		</main>
+		<footer class="footer">
+			<div class="footer_header">
+				<div class="footer_header_content">
+					<div class="header_content_adress">
+						<img src="./images/footer/carbon_location-filled.svg" alt="!">
+						<span class="adress">123456, г. Тавима, ул. Морская, д. 21</span>
+					</div>
+					<div class="logo_footer">
+						<a href="./index.html">
+							<img src="./images/footer/logo-footer.svg" alt="ЛОГОТИП">
+						</a>
+					</div>
+					<div class="header_content_contact">
+						<div class="content_contact_link">
+							<img src="./images/footer/ic_baseline-phone.svg" alt="TEL">
+							<a href="tel:+71234566789" class="adress">+7 (123) 456-67-89</a>
+						</div>
+						<div class="content_contact_link">
+							<img src="./images/footer/ic_round-email.svg" alt="TEL">
+							<a href="mailto:order@visma.ru" class="adress">order@visma.ru</a>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="footer_content_nav">
+				<nav class="footer_nav">
+					<div class="footer_nav_block">
+						<h2 class="nav_block_title">
+							информация о юр. лице
+						</h2>
+						<ul class="nav_block_list">
+							<li class="nav_block_item">
+								ОГРН: 11111111111111111
+							</li>
+							<li class="nav_block_item">
+								ИНН: 2222222222222
+							</li>
+							<li class="nav_block_item">
+								КПП: 3333333333333
+							</li>
+							<li class="nav_block_item">
+								ОКПО: 44444444444 ОКВЭД 52.24
+							</li>
+							<li class="nav_block_item">
+								ОКТМО: 5555555555555
+							</li>
+						</ul>
+					</div>
+					<div class="footer_nav_block">
+						<h2 class="nav_block_title">
+							Закупки
+						</h2>
+						<ul class="nav_block_list">
+							<li class="nav_block_item">
+								<a href="#">Нормативные документы</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Закупки на VISMA Order</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Закупки на VISMA Tender</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer_nav_block">
+						<h2 class="nav_block_title">
+							акционерам
+						</h2>
+						<ul class="nav_block_list">
+							<li class="nav_block_item">
+								<a href="#">Устав VISMA</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Свидетельства госрегистрации</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Список аффилированных лиц</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Информация</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Отчеты</a>
+							</li>
+						</ul>
+					</div>
+					<div class="footer_nav_block">
+						<h2 class="nav_block_title">
+							о компании
+						</h2>
+						<ul class="nav_block_list">
+							<li class="nav_block_item">
+								<a href="#">Порт сегодня</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Характеристики порта</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">История</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Дипломы и награды</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Транспортная безопасность</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Экология</a>
+							</li>
+							<li class="nav_block_item">
+								<a href="#">Правовая информация</a>
+							</li>
+						</ul>
+					</div>
+				</nav>
+			</div>
+		</footer>
 	</div>
 	<script src="./script/script.js"></script>
 </body>
