--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				</a>
 			</div>
 			<nav class="nav">
-				<a href="#">О компании</a>
+				<a href="./about-company.html" target="_blank">О компании</a>
 				<a href="#">Новости</a>
 				<a href="#">Услуги</a>
 				<a href="#">Клиентам</a>
@@ -98,7 +98,7 @@
 									Услуги
 								</p>
 								<p class="tabs_panel_content_footer">
-									Швартовые  операции
+									Швартовые операции
 								</p>
 							</div>
 						</div>
