--- a/about-company.html
+++ b/about-company.html
@@ -21,8 +21,8 @@
 					</a>
 				</div>
 				<nav class="nav">
-					<a href="#">О компании</a>
-					<a href="#">Новости</a>
+					<a href="./about-company.html">О компании</a>
+					<a href="./news.html">Новости</a>
 					<a href="#">Услуги</a>
 					<a href="#">Клиентам</a>
 				</nav>
@@ -41,6 +41,14 @@
 					</div>
 				</div>
 			</header>
+			<div class="name_page">
+				<div class="name_page_bg"></div>
+				<div class="name_page_content">
+					<a href="./index.html">Главная</a>
+					<img src="./images/name_page/material-symbols_arrow-left-rounded.svg" alt="">
+					<a href="./about-company.html">О компании</a>
+				</div>
+			</div>
 			<main class="main">
 				<section class="section_about_company">
 					<div class="about_company_bg"></div>
