--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			</div>
 			<nav class="nav">
 				<a href="./about-company.html" target="_blank">О компании</a>
-				<a href="#">Новости</a>
+				<a href="./news.html">Новости</a>
 				<a href="#">Услуги</a>
 				<a href="#">Клиентам</a>
 			</nav>
