--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<nav class="nav">
 				<a href="./about-company.html" target="_blank">О компании</a>
 				<a href="./news.html">Новости</a>
-				<a href="#">Услуги</a>
+				<a href="./services.html">Услуги</a>
 				<a href="#">Клиентам</a>
 			</nav>
 			<div class="search_filter_block">
