--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="./css/style.css">
+	
+	<link rel="stylesheet" href="./css/adaptive_style.css">
 	<title>VISMA</title>
 </head>
 <body>
@@ -26,6 +28,14 @@
 				<a href="./services.html">Услуги</a>
 				<a href="#">Клиентам</a>
 			</nav>
+				<div class="menu_button">
+					<span class="line_btn">
+					</span>
+					<span class="line_btn">
+					</span>
+					<span class="line_btn">
+					</span>
+				</div>
 			<div class="search_filter_block">
 				<form action="#" method="get">
 					<button class="search_btn">
@@ -43,6 +53,7 @@
 		</header>
 		<main class="main">
 			<section class="section_first">
+				<img src="./images/section_first/bg_section_first.svg" alt="bg" class="section_first_bg">
 				<div class="section_content_center">
 					<div class="section_description">
 						<h1 class="main_title">Тавимский морской порт VISMA</h1>
@@ -225,6 +236,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="./script/jquery-3.6.0.min.js"></script>
 	<script src="./script/script.js"></script>
 </body>
 </html>
