--- a/news.html
+++ b/news.html
@@ -10,6 +10,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 	
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/adaptive_style.css">
 	<title>Новости</title>
 </head>
 <body>
@@ -26,6 +27,14 @@
 				<a href="./services.html">Услуги</a>
 				<a href="#">Клиентам</a>
 			</nav>
+			<div class="menu_button">
+				<span class="line_btn">
+				</span>
+				<span class="line_btn">
+				</span>
+				<span class="line_btn">
+				</span>
+			</div>
 			<div class="search_filter_block">
 				<form action="#" method="get">
 					<button class="search_btn">
@@ -205,5 +214,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="./script/jquery-3.6.0.min.js"></script>
+	<script src="./script/script.js"></script>
 </body>
 </html>
