--- a/services.html
+++ b/services.html
@@ -11,6 +11,7 @@
 	<link href="https://fonts.googleapis.com/css2?family=PT+Sans:wght@400;700&display=swap" rel="stylesheet">
 
 	<link rel="stylesheet" href="./css/style.css">
+	<link rel="stylesheet" href="./css/adaptive_style.css">
 	<title>Услуги</title>
 </head>
 
@@ -28,6 +29,14 @@
 				<a href="./services.html">Услуги</a>
 				<a href="#">Клиентам</a>
 			</nav>
+			<div class="menu_button">
+				<span class="line_btn">
+				</span>
+				<span class="line_btn">
+				</span>
+				<span class="line_btn">
+				</span>
+			</div>
 			<div class="search_filter_block">
 				<form action="#" method="get">
 					<button class="search_btn">
@@ -55,7 +64,7 @@
 			<section class="section_servies_company">
 				<div class="servies_company">
 					<div class="servies_company_header">
-						<h2 class="h2_40">Услуги</h2>
+						<h2 class="h2_40 ">Услуги</h2>
 					</div>
 					<ul class="services_list">
 						<li class="services_item">
@@ -225,6 +234,7 @@
 			</div>
 		</footer>
 	</div>
+	<script src="./script/jquery-3.6.0.min.js"></script>
+	<script src="./script/script.js"></script>
 </body>
-
 </html>
